fixed footer from covering content

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -161,7 +161,7 @@ div#form-ka {
 
 /* footer */
 footer {
-	margin-top: -136px; /* negative value of footer height */
+	margin-top: -70px; /* negative value of footer height */
 	min-height: 121px !important;
 	background: #D4D4D4 !important;
 	padding: 0 20px;
