--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -45,7 +45,7 @@ html, body {
 
 #wrapper > .container {
 	padding-top: 45px;
-	padding-bottom: 60px;
+	padding-bottom: 90px;
 	overflow: auto;
 }
 
